<resources>
    <string name="app_name">GpsMockTest</string>
    <string name="enter_app">进入应用</string>
    <string name="author">Thank: hilavergil@gmail.com \n For learning purposes only</string>
    <string name="nav_header_title">Mock Location</string>
    <string name="nav_header_subtitle">gpsmocktest</string>

    <string name="map">地图</string>
    <string name="history">历史记录</string>
    <string name="offline_map">离线地图</string>
    <string name="setting">设置</string>
    <string name="bug_report">问题反馈</string>
    <string name="communicate">Communicate</string>
    <string name="contact_me">与我联系</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_setting">开发人员选项</string>
    <string name="manual_input">经纬度定位</string>
    <string name="resetmap">重置地图</string>

    <string name="norecord">无历史纪录</string>

</resources>
